# autolink

./: README.md  autolink.py  pyproject.toml  requirements.txt  test.md  test.py  test_basic.py
autolink/: __init__.py  autolink.py  extension.py  tag_index.py
src/autolink/: __init__.py  __main__.py
tests/: test_TagIndex.py  test_autolink_functions.py  test_rename.py  test_terminal_operation.py
