build-backend = "setuptools.build_meta"

[project]
name = "autolink"
version = "0.1.0"
authors = [
  { name="Horst Grewe", email="kooperto.raihead@gmail.com" },
]
description = "functions and classes to automaticly link Markdownfiles through headers and wikilinks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/00BraiNdeaD00/autolink"
"Bug Tracker" = "https://github.com/00BraiNdeaD00/autolink/issues"

